# Shiny_Floor_Project

./: README.md
base_AP/softap_sta/: sdkconfig  sdkconfig.old
glasslight_Strip/led_strip/main/: led_strip_example_main.c
led_strip/led_strip/main/: led_strip_example_main.c
main_prj/led_strip/main/: led_strip_example_main.c
pose_estimation/: .people.py.swp  .server.sh.swp  .start.sh.swo  .start.sh.swp  TCPclient.py  ap-tool.sh  draw.py  draw1.py  people.py  people_multycamera.py  people_multyvideo.py  peopletcp.py  peopletcp_mp4.py  regions (copy).json  regions.json  regions1 (copy).json  regions1.json  server  server.cpp  server.sh  start.sh  start.txt  workouts2.avi  yolov8n-pose.cache
pose_estimation/datasets/coco8-pose/labels/: train.cache  val.cache
pose_estimation/server/: ap-tool.sh  server  server.cpp  server_back.cpp  server_back.up
tcp_client/: sdkconfig  sdkconfig.old
tcp_client/main/: CMakeLists.txt  tcp_client_main.c
tcp_client/tcp_client/: sdkconfig  sdkconfig.old
tcp_client/tcp_client/main/: CMakeLists.txt  tcp_client_main.c
